--- a/src/App.css
+++ b/src/App.css
@@ -3,7 +3,7 @@ html {
 }
 
 .main {
-  min-height: 80.8vh;
+  min-height: 40vw;
 }
 
 * {
@@ -251,7 +251,7 @@ label > i {
 }
 
 .skills {
-  margin-top: 12rem;
+  margin-top: 5rem;
   padding: 2rem;
   font-size: 2rem;
   justify-content: space-between;
