--- a/src/App.css
+++ b/src/App.css
@@ -1,21 +1,102 @@
+html {
+  scroll-behavior: smooth;
+}
+
+/* .main {
+  min-height: 40vw;
+} */
+
 * {
   box-sizing: border-box;
 }
 
+body {
+  margin: 0;
+  padding: 0;
+}
+
+.container {
+  width: 90%;
+  margin: auto;
+}
+
+
+.flex {
+  display: flex;
+  gap: 1rem;
+}
+
+.grid {
+  display: grid;
+  gap: 1rem;
+}
+
+a {
+  text-decoration: none;
+  color: inherit;
+}
+
+/* -------------- root variable --------------- */
 :root {
   --color-orange: #ff5c00;
   --color-dark: #2a2a2a;
 
   --body-bg: #fff;
-  --text-color: var(--color-dark);
+  --text-color: var(var(--color-dark));
   --border-color: var(--color-dark);
+  --button-bg: var(--color-dark);
+  --button-text: #fff;
+
+  --dark-bg: var(--color-dark);
+  --dark-text-color: #fff;
+  --dark-border-color: #fff;
+  --dark-button-bg: #fff;
+  --dark-button-text: var(--color-dark);
 }
 
+
+.wrapper {
+  background: var(--body-bg);
+  min-height: 100vh;
+  color: var(--text-color);
+}
+
+/* ----------------- dark mode ---------------- */
+
+
+/* ---------------- header --------------------- */
 header {
   box-shadow: 0 0 10px 5px grey;
   position: sticky;
   top: 0;
   background: var(--body-bg);
+}
+
+.logo {
+  font-size: 1.3rem;
+  position: relative;
+}
+
+.logo > div:nth-child(1) {
+  font-weight: bolder;
+}
+
+label > i {
+  transform: rotate(180deg);
+}
+
+.line {
+  font-size: 1.3rem;
+  letter-spacing: 0.5rem;
+}
+
+.line::before {
+  content: "";
+  width: 4px;
+  height: 100%;
+  position: absolute;
+  left: 24%;
+  background: var(--color-orange);
 }
 
 .header {
@@ -24,44 +105,42 @@ header {
   padding: 1rem 0;
 }
 
+#darkMode {
+   display: none;
+}
+
 .navigation {
-  justify-content: space-between;
-  align-items: center;
-}
-
-.container {
-  width: 90%;
-  margin: auto;
-}
-
-.flex {
-  display: flex;
-  gap: 1rem;
-}
-
-.nav-left {
-  align-items: center;
-  position: relative;
-}
-
-.line::before {
-  content: "";
-  width: 4px;
-  height: 40%;
-  left: 46%;
-  position: absolute;
-  background: var(--color-orange);
-}
-
-.menu ul {
   list-style: none;
 }
 
-.grid {
-  display: grid;
-  gap: 1rem;
+.navigation li a:hover {
+  color: var(--color-orange);
+  transition: all 0.5s;
 }
 
+.dark-mode-toggle {
+  position: fixed;
+  top: 8rem;
+  left: 3rem;
+}
+
+.dark-mode-toggle:hover {
+  transform: scale(1.5);
+  cursor: pointer;
+  transition: all 0.5s;
+}
+
+/* --- dark mode activation ---  */
+#darkMode:checked + .wrapper {
+  --body-bg: var(--color-dark);
+  --text-color: var(--dark-text-color);
+  /* color: var(--dark-text-color); */
+  --border-color: var(--dark-border-color);
+  --button-bg: var(--dark-button-bg);
+  --button-text: var(--dark-button-text);
+}
+
+/* hero section */
 .hero-section {
   padding-top: 10rem;
   color: var(--text-color);
@@ -73,29 +152,50 @@ header {
   padding: 0 2rem;
 }
 
-.left button {
-  background: var(--color-dark);
-  padding: 0.8rem 2.5rem;
-  border-radius: 2rem;
-  border: none;
-  cursor: pointer;
-}
-
-.left button a {
-  color: var(--body-bg);
-}
-
 .left {
   grid-area: left;
-  justify-content: center;
-  flex-direction: column;
-  margin: 10vh;
+
+  /* justify-content: center; */
+  align-items: center;
+
+  margin-left: 10vw;
+
+}
+
+.left .name {
+  font-size: 1.3rem;
+  font-weight: bold;
+}
+
+.left .tag {
+  font-size: 2.2rem;
+  font-weight: bolder;
+  letter-spacing: 5px;
+}
+
+.left button {
+  background: var(--button-bg);
+  padding: 0.8rem 2.5rem;
+  border-radius: 2rem;
+  color: var(--button-text);
+  border: none;
+  
+}
+
+.title {
+      text-align: center;
+      margin-bottom: 3rem;
+      
+}
+
+.title span {
+  border-bottom: 10px solid var(--color-orange);
 
 }
 
 .right {
   grid-area: right;
-  justify-content: center;
+  justify-content: flex-end;
   align-items: center;
   margin-top: -5rem;
 }
@@ -110,7 +210,7 @@ header {
 }
 
 .banner {
-    
+  
   margin-top: 7rem;
   border: 2px solid var(--border-color);
   padding: 2rem;
@@ -151,7 +251,7 @@ header {
 }
 
 .skills {
-  margin-top: 7rem;
+  margin-top: 5rem;
   padding: 2rem;
   font-size: 2rem;
   justify-content: space-between;
@@ -172,8 +272,8 @@ header {
 
 /* ------------ project ------------- */
 .project {
-  margin-top: 3rem;
-  padding: 7rem 0;
+  /* margin-top: 3rem; */
+  padding: 5rem 0;
 }
 
 .project h2 {
@@ -182,7 +282,7 @@ header {
 }
 
 .project .project-container {
-  grid-template-columns: repeat(auto-fit, minmax(500px, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
   gap: 3rem;
 
   /* grid-template-columns: repeat(2, 1fr); */
@@ -193,7 +293,6 @@ header {
   box-shadow: -1px 4px 10px 8px rgba(101, 101, 101, 0.244);
   border-radius: 5px;
   padding-bottom: 2rem;
-  width: 25vw;
 
 }
 
@@ -206,9 +305,198 @@ header {
 .project-card .bottom i {
   font-size: 4rem;
   padding: 4rem;
-  color: var(--color-dark);
 }
 
 .project-card .top img {
   width: 100%;
+}
+
+/* ---------about -------- */
+.about {
+  background: rgb(165, 165, 255);
+  padding: 5rem 0; 
+}
+
+.about content {
+  margin-top: 3rem;
+}
+
+.about .myImg {
+  width: 60%;
+  height: 400px;
+  
+  justify-content: center;
+}
+
+.about .myImg img {
+  min-width: 350px;
+  max-width: 400px;
+}
+
+.about .my-bio .h2 {
+  font-size: 2rem;
+  margin-bottom: 3rem;
+}
+
+.my-bio p:nth-child(4) {
+  font-weight: bolder;
+  font-style: 1.3rem;
+  padding: 1rem 0;
+}
+
+.my-bio .tag {
+  font-weight: bolder;
+  font-style: 1.3rem;
+}
+
+.my-bio .tag + div span {
+  padding: 0.8rem 1.2rem;
+  border-radius: 5px;
+}
+
+.my-bio .tag + div span:hover {
+  cursor: pointer;
+  background: gray;
+}
+
+.getin {
+  margin-top: 5rem;
+}
+
+.skills-getin {
+   margin-top: 5rem;
+   padding: 2rem;
+   font-size: 2rem;
+   justify-content: space-between;
+   flex-wrap: wrap;
+   gap: 3rem;
+   align-items: center;
+}
+
+.skills-getin .icon-skill {
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.skills-getin .icon-skill .icon-container i {
+  font-size: 7rem;
+}
+
+.getin .button-container {
+  margin-top: 5rem;
+  justify-content: center;
+}
+
+.getin .button-container a {
+  background: var(--button-bg);
+  padding: 0.75rem 15vw;
+  border-radius: 100px;
+  color: var(--button-text);
+  border: none;
+  font-size: 3vh;
+  justify-content: space-around;
+  align-items: center;
+}
+
+.getin .button-container:hover {
+  cursor: pointer;
+}
+
+.getin .button-container i {
+  padding-left: 2rem;
+  color: var(--color-orange);
+  font-size: 3rem;
+}
+
+.links {
+  background: #2a2a2a;
+  position: relative;
+}
+
+.alllinks {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 3rem 30vw;
+  margin-top: 4rem;
+  background: #2a2a2a;
+  color: var(--dark-text-color);
+}
+
+.links-list {
+  list-style: none;
+  font-size: 20px;
+  font-weight: bold;  
+}
+
+.links-list li {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  margin-left: -30px;
+  margin-bottom: 5px;
+}
+
+.links-list li:hover {
+  color: rgb(44, 159, 247);
+  cursor: pointer;
+}
+
+.scroll-up {
+  position: fixed;
+  right: 5rem;
+  bottom: 8rem;
+  height: 8rem;
+  width: 8rem;
+  border-radius: 50%;
+  background: var(--color-orange);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 7rem;
+  
+}
+
+footer {
+  background: #2a2a2a;
+  color: var(--dark-text-color);
+  justify-content: center;
+  width: 100%;
+  align-items: center;
+  padding: 0.8rem 0;
+  margin-top: 1rem;
+}
+
+@media (max-width: 970px) {
+  .image-resize {
+    width: 40vw;
+  }
+
+  .right img {
+      width: 40vw;
+  }
+}
+
+@media (max-width: 768px) {
+  .hero {
+      grid-template-areas: "right"
+                           "left";
+  }
+
+  .left,
+  .right {    
+      justify-content: center;
+  
+  }
+  
+  .about .container {
+      flex-direction: column;
+      align-items: center;
+  }
+
+  .alllinks {
+      flex-direction: column;
+      align-items: center;
+  }
 }
